--- a/book-detail.html
+++ b/book-detail.html
@@ -76,7 +76,7 @@
   </main>
 
   <script>
-    const API_URL = "YOUR_SCRIPT_URL"; // ← 여기 Apps Script URL 넣으세요
+    const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec"; // ← 여기 Apps Script URL 넣으세요
 
     async function loadBookDetail() {
       const params = new URLSearchParams(window.location.search);
