--- a/book-detail.html
+++ b/book-detail.html
@@ -75,40 +75,42 @@
   </nav>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
+  const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
 
-    // URL 파라미터에서 제목 가져오기
-    const params = new URLSearchParams(window.location.search);
-    const title = params.get("title");
+  const params = new URLSearchParams(window.location.search);
+  const titleParam = params.get("title");
+  const title = decodeURIComponent(titleParam || "").trim();  // ✅ decode + trim
 
-    if (!title) {
-      document.getElementById("book-detail").innerHTML = "<p>잘못된 접근입니다.</p>";
-    } else {
-      fetch(API_URL + "?action=list")
-        .then(res => res.json())
-        .then(data => {
-          const book = data.find(b => b.제목 === title);
-          if (book) {
-            document.getElementById("book-detail").innerHTML = `
-              <img src="${book.이미지 || "https://via.placeholder.com/200x300?text=No+Image"}" alt="${book.제목}">
-              <h2>${book.제목}</h2>
-              <p>${book.저자} | ${book.출판사}</p>
-              <div class="desc">${book.설명 || book.내용 || "설명 없음"}</div>
-              <div class="links">
-                ${book.알라딘 ? `<a class="aladin" href="${book.알라딘}" target="_blank">알라딘</a>` : ""}
-                ${book.교보 ? `<a class="kyobo" href="${book.교보}" target="_blank">교보</a>` : ""}
-                ${(book.YES24 || book["예스24"]) ? `<a class="yes24" href="${book.YES24 || book["예스24"]}" target="_blank">예스24</a>` : ""}
-              </div>
-            `;
-          } else {
-            document.getElementById("book-detail").innerHTML = "<p>책 정보를 찾을 수 없습니다.</p>";
-          }
-        })
-        .catch(err => {
-          console.error(err);
-          document.getElementById("book-detail").innerHTML = "<p>데이터를 불러오는 중 오류가 발생했습니다.</p>";
-        });
-    }
-  </script>
+  fetch(API_URL + "?action=list")
+    .then(res => res.json())
+    .then(data => {
+      const book = data.find(b => (b.제목 || "").trim() === title); // ✅ trim 비교
+      const container = document.getElementById("bookDetail");
+
+      if (!book) {
+        container.innerHTML = `<p>책 정보를 찾을 수 없습니다.</p>`;
+        return;
+      }
+
+      container.innerHTML = `
+        <div style="max-width:600px;margin:0 auto;background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 6px rgba(0,0,0,0.1);text-align:center;">
+          <img src="${book.이미지 || ''}" alt="${book.제목}" style="max-width:200px;margin-bottom:16px;">
+          <h2>${book.제목}</h2>
+          <p>${book.저자} | ${book.출판사}</p>
+          <p>${book.설명 || ''}</p>
+
+          <div style="margin-top:16px;">
+            ${book.알라딘 ? `<a href="${book.알라딘}" target="_blank">🔗 알라딘</a>` : ''}
+            ${book.교보 ? `<a href="${book.교보}" target="_blank">📘 교보문고</a>` : ''}
+            ${book.YES24 ? `<a href="${book.YES24}" target="_blank">📚 예스24</a>` : ''}
+          </div>
+        </div>
+      `;
+    })
+    .catch(err => {
+      console.error(err);
+      alert("불러오기 실패");
+    });
+</script>
 </body>
 </html>
